# TJMedia2023_AOS

./: .gitignore
VersePlay/: .gitignore  build.gradle  gradle.properties  settings.gradle  version.gradle
VersePlay/app/: build.gradle  google-services.json  proguard-rules.pro
VersePlay/app/src/debug/res/drawable/: ic_launcher_foreground.xml
VersePlay/app/src/main/: AndroidManifest.xml
VersePlay/app/src/main/assets/licenses/: OpenSourceLicense.html
VersePlay/app/src/main/cpp/: CMakeLists.txt  JInterface.cpp  SPInterface.cpp  SPInterface.h  SPMixAudio.cpp
VersePlay/app/src/main/res/anim/: in_left_to_right_medium.xml  in_left_to_right_short.xml  in_right_to_left_medium.xml  in_right_to_left_short.xml  out_left_to_right.xml  out_left_to_right_medium.xml  out_left_to_right_short.xml  out_right_to_left.xml  out_right_to_left_medium.xml  out_right_to_left_short.xml  rotate.xml  slide_down.xml  slide_right.xml  slide_up.xml
VersePlay/app/src/main/res/color/: complete_text_color.xml
VersePlay/app/src/main/res/drawable/: after_attach_image_border.xml  attach_image_border.xml  bg_black_round_22.xml  bg_circle_off.xml  bg_circle_on.xml  bg_common_btn_corner_20.xml  bg_common_dialog.xml  bg_community_tab.xml  bg_corner_20_gray_0_5_border.xml  bg_corner_circle_50.xml  bg_dialog_help_bolder_corner_20.xml  bg_dialog_one_bottom_corner_20.xml  bg_dialog_one_top_corner_20.xml  bg_dialog_rounded.xml  bg_edit_image_circle.xml  bg_edit_link.xml  bg_edit_round.xml  bg_gradient_l.xml  bg_gradient_profile.xml  bg_intro_btn_corner_10.xml  bg_progress_bar_mission.xml  bg_progress_bar_singing.xml  bg_round_border_bule.xml  bg_round_border_gray.xml  bg_round_border_sing_point.xml  bg_round_border_white.xml  bg_search_keyword.xml  bg_square.xml  bg_square_border_red.xml  bg_square_round.xml  bg_square_round_bottom.xml  bg_square_round_butten.xml  bg_square_round_butten_bule.xml  bg_square_round_butten_gray.xml  bg_square_round_hashtag.xml  bg_square_round_shadow.xml  bg_square_round_tl_tr.xml  bg_vote_not_selected.xml  bg_vote_selected.xml  btn_filter_select.xml  (+175 more)
VersePlay/app/src/main/res/font/: font_noto_sans_bold.xml  font_noto_sans_kr_bold.xml  font_noto_sans_kr_light.xml  (+5 more)
VersePlay/gradle/wrapper/: gradle-wrapper.properties
VersePlay/keystore/: TjKeyStore
(+956 files in other folders)
